# cc_github_sample

./: .env.example  README.md  main.py  pyproject.toml
.claude/: CLAUDE.md  plan.md
.github/workflows/: auto-implementation.yml  claude-code-review.yml  issue-auto-assign.yml  parallel-development.yml  pr-auto-update.yml
app/: database.py
app/auth/: auth.py
app/models/: post.py  user.py
app/routers/: auth.py  posts.py  users.py
app/schemas/: post.py  user.py
